# ibkr-api

./: .gitignore  pyproject.toml  simple_port_check.py
app/: ibkr.py
scripts/apple_supplier/: create_ibkr_watchlist.py  parse_apple_suppliers.py
scripts/apple_supplier/data/: apple_supplier_tickers.csv  apple_supplier_tickers.json  apple_suppliers.txt  found_tickers_only.json  ticker_list.txt
scripts/yahoo_finance_csv/ibkr_to_yahoo/: format_ibkr_statement_for_yahoo.py  process_activity_statement.py
scripts/yahoo_finance_csv/swissquote_to_yahoo/: format_swissquote_transaction_for_yahoo.py
