[project]
name = "investment-analytics"
version = "0.1.0"
description = "Investment analytics"
authors = [{name = "User", email = "user@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "PyPDF2>=3.0.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "yahooquery>=2.3.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.10.0",
    "ib-insync>=0.9.86",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]
